Fix DisplaySoftwareOutputSurface swap with transparent background

Change QPainter's compositing mode from the default SourceOver (alpha-blending)
to Source (copy).

Fixes: QTBUG-81250
Change-Id: I670772b77cdd89ec42de96808608693ad50f726a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>